--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,24 +9,29 @@
 </head>
 <body>
 
-  
-  <header class="bg-primary text-white">
-    <nav class="navbar navbar-expand-lg navbar-dark">
-      <a class="navbar-brand" href="#">
-        <img src="/static/Logo_Bg/hansrajlogo.png" alt="Logo" width="40">
-      </a>
-      <a class="navbar-brand mr-auto" href="{{ url_for('home') }}">StuFac Communication Portal</a>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link" href="{{ url_for('announcement') }}">Announcements</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Resources</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Faculty</a></li>
-          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
+    
+    <header class="bg-primary text-white">
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="#">
+          <img src="/static/Logo_Bg/hansrajlogo.png" alt="Logo" width="40">
+        </a>
+        <a class="navbar-brand mr-auto" href="{{ url_for('home') }}">StuFac Communication Portal</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('announcements') }}">Announcements</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Resources</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Faculty</a></li>
+            <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+            
+            {% if session['email'] %}
+            <li class="nav-item"><a class="nav-link" href="{{url_for('logout')}}">Logout</a></li>
+            {% else %}
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
+            {% endif %}
+          </ul>
+        </div>
+      </nav>
+    </header>
 
   <div class="bg-overlay py-5 bg-image">
     <div class="container">
@@ -36,7 +41,7 @@
             <img src="/static/Cards/announcements.jpg" class="card-img-top" alt="Image 1">
             <div class="card-body">
               <p class="card-text">Announcement Board</p>
-              <a href="{{ url_for('announcement') }}" class="btn btn-primary btn-block">Go To</a>
+              <a href="{{ url_for('announcements') }}" class="btn btn-primary btn-block" {% if 'email' not in session %}onclick="alert('Please login first'); return false;" {% endif %}>Go To</a>
             </div>
           </div>
         </div>
@@ -45,7 +50,7 @@
             <img src="/static/Cards/resources.jpg" class="card-img-top" alt="Image 2">
             <div class="card-body">
               <p class="card-text">Resources Folder</p>
-              <a href="{{ url_for('announcement') }}" class="btn btn-primary btn-block">Go To</a>
+              <a href="{{ url_for('resources') }}" class="btn btn-primary btn-block" {% if 'email' not in session %}onclick="alert('Please login first'); return false;" {% endif %}>Go To</a>
             </div>
           </div>
         </div>
@@ -54,7 +59,7 @@
             <img src="/static/Cards/faculty.png" class="card-img-top" alt="Image 3">
             <div class="card-body">
               <p class="card-text">Faculty</p>
-              <a href="{{ url_for('announcement') }}" class="btn btn-primary btn-block">Go To</a>
+              <a href="{{ url_for('announcements') }}" class="btn btn-primary btn-block" >Go To</a>
             </div>
           </div>
         </div>
