--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -19,8 +19,8 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a class="nav-link" href="{{ url_for('announcements') }}">Announcements</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Resources</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Faculty</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('resources') }}">Resources</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('faculty')}}">Faculty</a></li>
             <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
             
             {% if session['email'] %}
@@ -59,7 +59,7 @@
             <img src="/static/Cards/faculty.png" class="card-img-top" alt="Image 3">
             <div class="card-body">
               <p class="card-text">Faculty</p>
-              <a href="{{ url_for('announcements') }}" class="btn btn-primary btn-block" >Go To</a>
+              <a href="{{ url_for('faculty')}}" class="btn btn-primary btn-block" >Go To</a>
             </div>
           </div>
         </div>
@@ -78,8 +78,6 @@
       </div>
     </div>
   </div>
-
-
 
   <div class="bg-light py-5">
     <div class="container">
