--- a/templates/login.html
+++ b/templates/login.html
@@ -18,8 +18,8 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link" href="{{ url_for('announcements') }}">Announcements</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Resources</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Faculty</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('resources') }}">Resources</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('faculty')}}">Faculty</a></li>
           <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
           
           {% if session['email'] %}
